devel.examples/Bad-Example/lib/Bad/Example/Role2.pm
package Bad::Example::Role2;
use Bad::Example::Mite -role;
around 'missing' => sub {};
1;